[config] maven build plugin change